--- a/package.json
+++ b/package.json
@@ -17,25 +17,25 @@
 		"prettier": "prettier --write ./"
 	},
 	"dependencies": {
-		"js-cool": "^1.0.6",
-		"nuxt": "^2.15.1"
+		"js-cool": "^2.1.2",
+		"nuxt": "^2.15.8"
 	},
 	"devDependencies": {
-		"@babel/eslint-parser": "^7.12.17",
-		"@saqqdy/prettier-config": "^1.0.3",
-		"autod": "^3.0.1",
+		"@saqqdy/prettier-config": "^1.0.4",
+		"autod": "^3.1.1",
 		"autod-egg": "^1.1.0",
-		"egg": "^2.29.3",
-		"egg-bin": "^4.11.0",
-		"egg-ci": "^1.11.0",
-		"egg-mock": "^4.0.1",
-		"eslint": "^7.20.0",
+		"babel-eslint": "^10.1.0",
+		"egg": "^2.30.0",
+		"egg-bin": "^4.16.4",
+		"egg-ci": "^1.19.0",
+		"egg-mock": "^3.26.0",
+		"eslint": "^7.32.0",
 		"eslint-config-egg": "^9.0.0",
-		"eslint-config-sets": "^1.0.10",
-		"eslint-plugin-jsdoc": "^32.0.2",
+		"eslint-config-sets": "^1.5.1",
+		"eslint-plugin-jsdoc": "^36.1.0",
 		"jsdoc-to-markdown": "^6.0.1",
-		"prettier": "^2.2.1",
-		"uglify-js": "^3.12.8"
+		"prettier": "^2.4.1",
+		"uglify-js": "^3.14.2"
 	},
 	"repository": {
 		"type": "git",
