--- a/.eslintignore
+++ b/.eslintignore
@@ -1,6 +1,12 @@
-/dist/
-/nuxt/
-/run/
-/logs/
-/test/
+.git
+node_modules
+/run
+dist
+public
+pnpm-lock.yaml
 
+*.bak
+*_bak
+*.bak.js
+
+stats.html
