--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
 .DS_Store
 node_modules
 /dist
-yarn.lock
-.github
 /.pnp
 .pnp.js
+*.bak
+*_bak
 
 /tests/e2e/reports/
 selenium-debug.log
@@ -28,7 +28,6 @@ yarn-error.log*
 
 # Editor directories and files
 .idea
-.vscode
 *.suo
 *.ntvs*
 *.njsproj
