--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,15 +1,17 @@
 environment:
-    matrix:
-        - nodejs_version: "8"
-        - nodejs_version: "10"
+  matrix:
+    - nodejs_version: '12'
+    - nodejs_version: '14'
+    - nodejs_version: '16'
+    - nodejs_version: '18'
 
 install:
-    - ps: Install-Product node $env:nodejs_version
-    - npm i npminstall && node_modules\.bin\npminstall
+  - ps: Install-Product node $env:nodejs_version
+  - npm i npminstall && node_modules\.bin\npminstall
 
 test_script:
-    - node --version
-    - npm --version
-    - npm run test
+  - node --version
+  - npm --version
+  - npm run test
 
 build: off
