--- a/package.json
+++ b/package.json
@@ -1,71 +1,100 @@
 {
-    "name": "egg-nuxt-tool",
-    "description": "egg plugin for nuxt render",
-    "version": "1.0.3",
-    "eggPlugin": {
-        "name": "nuxtTool"
-    },
-    "scripts": {
-        "test-local": "egg-bin test",
-        "cov": "egg-bin cov",
-        "lint": "eslint .",
-        "ci": "egg-bin pkgfiles --check && npm run lint && npm run cov",
-        "pkgfiles": "egg-bin pkgfiles",
-        "autod": "autod",
-        "test": "npm run lint -- --fix && egg-bin pkgfiles && npm run test-local",
-        "eslint": "eslint --fix --ext .vue,.js",
-        "prettier": "prettier --write ./"
-    },
-    "dependencies": {
-        "js-cool": "^2.1.2",
-        "nuxt": "^2.15.8"
-    },
-    "devDependencies": {
-        "@saqqdy/prettier-config": "^1.0.4",
-        "autod": "^3.1.1",
-        "autod-egg": "^1.1.0",
-        "babel-eslint": "^10.1.0",
-        "egg": "^2.30.0",
-        "egg-bin": "^4.16.4",
-        "egg-ci": "^1.19.0",
-        "egg-mock": "^3.26.0",
-        "eslint": "^7.32.0",
-        "eslint-config-egg": "^9.0.0",
-        "eslint-config-sets": "^1.5.3",
-        "eslint-plugin-jsdoc": "^36.1.0",
-        "jsdoc-to-markdown": "^6.0.1",
-        "prettier": "^2.4.1",
-        "uglify-js": "^3.14.2"
-    },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/saqqdy/egg-nuxt-tool.git"
-    },
-    "engines": {
-        "node": ">=10.0.0"
-    },
-    "files": [
-        "app.js",
-        "agent.js",
-        "config",
-        "app"
-    ],
-    "ci": {
-        "version": "8, 10"
-    },
-    "keywords": [
-        "egg-nuxt-tool",
-        "nuxt",
-        "render",
-        "egg",
-        "plugin",
-        "eggPlugin",
-        "egg-plugin"
-    ],
-    "author": "saqqdy.com",
-    "license": "MIT",
-    "bugs": {
-        "url": "https://github.com/saqqdy/egg-nuxt-tool/issues"
-    },
-    "homepage": "https://github.com/saqqdy/egg-nuxt-tool#readme"
+	"name": "egg-nuxt-tool",
+	"description": "An egg plugin for using nuxt render programatically",
+	"version": "2.0.0-beta.1",
+	"packageManager": "pnpm@8.6.3",
+	"eggPlugin": {
+		"name": "nuxt"
+	},
+	"files": [
+		"app",
+        "lib",
+		"config",
+		"agent.js",
+		"app.js"
+	],
+	"scripts": {
+		"test": "pnpm run lint -- --fix && egg-bin pkgfiles && pnpm run test-local",
+		"test-local": "egg-bin test",
+		"cov": "egg-bin cov",
+		"lint": "eslint .",
+		"ci": "egg-bin pkgfiles --check && pnpm run lint && pnpm run cov",
+		"pkgfiles": "egg-bin pkgfiles",
+		"pub": "tscjs scripts/publish",
+		"unpub": "tscjs scripts/unpublish",
+		"sync": "tscjs scripts/sync",
+		"workflow:publish-test": "zx scripts/workflow.mjs",
+		"dist": "run-s eslint prettier pub",
+		"autod": "autod",
+		"eslint": "eslint --fix --ext .ts,.js ./",
+		"prettier": "prettier --write \"**/*.{js,ts,json,md}\""
+	},
+	"dependencies": {
+		"js-cool": "^4.7.0",
+		"nuxt": "^2.17.0"
+	},
+	"devDependencies": {
+		"@eslint-sets/eslint-config-basic": "^5.5.0",
+		"autod": "^3.1.2",
+		"autod-egg": "^1.1.0",
+		"egg": "^3.17.3",
+		"egg-bin": "^6.4.1",
+		"egg-ci": "^2.2.0",
+		"eslint": "^8.43.0",
+		"eslint-config-egg": "^12.2.1",
+		"load-yml": "^1.3.0",
+		"npm-run-all": "^4.1.5",
+		"prettier": "^2.8.8",
+		"prettier-config-common": "^1.4.0",
+		"reinstaller": "^3.0.2",
+		"tsnd": "^1.1.0",
+		"zx": "^7.2.2"
+	},
+	"peerDependencies": {
+		"egg": ">=2",
+		"egg-bin": ">=4",
+		"nuxt": ">=2 <3"
+	},
+	"engines": {
+		"node": ">=12.20"
+	},
+	"pnpm": {
+		"peerDependencyRules": {
+			"ignoreMissing": [
+				"@babel/core",
+				"webpack",
+				"typescript",
+				"mocha"
+			],
+			"allowedVersions": {
+				"eslint": ">= 8.0.0"
+			}
+		}
+	},
+	"keywords": [
+		"egg-nuxt-tool",
+		"nuxt",
+		"nuxt-render",
+		"eggjs",
+		"plugin",
+		"eggPlugin",
+		"egg-plugin"
+	],
+	"publishConfig": {
+		"registry": "https://registry.npmjs.org",
+		"access": "public"
+	},
+	"ci": {
+		"version": "12, 14, 16, 18"
+	},
+	"license": "MIT",
+	"author": "saqqdy <https://github.com/saqqdy>",
+	"homepage": "https://github.com/saqqdy/egg-nuxt-tool#readme",
+	"bugs": {
+		"url": "https://github.com/saqqdy/egg-nuxt-tool/issues"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/saqqdy/egg-nuxt-tool.git"
+	}
 }
