--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"version": "2.0.0-beta.1",
 	"packageManager": "pnpm@8.6.3",
 	"eggPlugin": {
-		"name": "nuxt"
+		"name": "nuxtTooL"
 	},
 	"files": [
 		"app",
